# wapu-cli

./: .coverage  .gitignore  AGENTS.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: publish.yml
docs/: smoke-test-cli.md
scripts/: smoke_test_cli.py
src/wapu_cli/: __init__.py  cli.py  client.py  config.py  errors.py  output.py
src/wapu_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_main.py  test_output.py
