[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wapu"
version = "0.2.0"
description = "CLI for interacting with the WapuPay backend"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  {name = "andycreed0x"},
]
keywords = ["finance", "blockchain", "bitcoin", "p2p", "lightning", "cli"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "click>=8.1,<9",
  "PyYAML>=6,<7",
  "requests>=2.31,<3",
  "tabulate>=0.9,<0.10",
]

[project.urls]
Homepage = "https://wapu.shiafu.com"
Repository = "https://github.com/wapu-app/wapu-cli"
Issues = "https://github.com/wapu-app/wapu-cli/issues"

[dependency-groups]
dev = [
  "pytest-cov>=7.1.0",
  "pytest>=8.0,<9",
  "responses>=0.25,<0.26",
]

[project.scripts]
wapu = "wapu_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
